<resources>
    <string name="app_name">TvGame2048</string>
    <string name="text_mode3">3X3</string>
    <string name="text_mode4">4X4(classic)</string>
    <string name="text_mode5">5X5</string>
    <string name="text_mode6">6X6</string>
    <string name="allow_go_back_ask">Allow to go back?</string>
    <string name="allow_go_back">Yes</string>
    <string name="forbid_go_back">No</string>

    <string name="game_best_scores">Best:</string>
    <string name="game_current_scores">Scores:</string>

    <string name="game_setting_go_home">Home</string>
    <string name="game_setting_go_back">Back</string>
    <string name="game_setting_restart">Restart</string>
    <string name="game_setting_sound">Sound</string>

    <string name="game_exit_ask_string">Exit?</string>
    <string name="win_game">You win!!!</string>
    <string name="lost_game">You lost!!!</string>
    <string name="go_home">Go home?</string>
    <string name="game_share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="menu_key_hint">Press MENU key to get more options</string>
</resources>
