<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:background="@drawable/bg_of_dialog_with_round_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ask_text"
            android:gravity="center"
            android:textSize="@dimen/text_mode_size"
            android:textColor="@color/blue_number2"
            android:layout_centerHorizontal="true"
            android:text="@string/allow_go_back_ask"
            android:layout_width="300dp"
            android:layout_height="100dp" />
        <Button
            style="@style/dialog_button"
            android:text="@string/allow_go_back"
            android:id="@+id/dialog_button_yes"
            android:layout_below="@+id/ask_text"
            android:layout_alignLeft="@+id/ask_text"
            android:layout_width="90dp"
            android:layout_height="40dp" />
        <Button
            style="@style/dialog_button"
            android:text="@string/forbid_go_back"
            android:id="@+id/dialog_button_no"
            android:layout_below="@+id/ask_text"
            android:layout_alignRight="@+id/ask_text"
            android:layout_width="90dp"
            android:layout_height="40dp" />
    </RelativeLayout>

</RelativeLayout>