<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    tools:context="com.jinwei.tvgame2048.ui.GameSettingsActivity">
<LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="6dp"
        android:background="@drawable/bg_round_rectangle_stroke"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="5dp"
            style="@style/choice_mode_button_style_top"
            android:id="@+id/button_mode3"
            android:text="@string/text_mode3"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <ImageView
            android:background="@color/gray_stoke"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_stroke" />
        <Button
            style="@style/choice_mode_button_style"
            android:id="@+id/button_mode4"
            android:text="@string/text_mode4"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <ImageView
            android:background="@color/gray_stoke"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_stroke" />
        <Button
            style="@style/choice_mode_button_style"
            android:id="@+id/button_mode5"
            android:text="@string/text_mode5"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
        <ImageView
            android:background="@color/gray_stoke"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_stroke" />
        <Button
            style="@style/choice_mode_button_style_bottom"
            android:id="@+id/button_mode6"
            android:layout_marginBottom="5dp"
            android:text="@string/text_mode6"
            android:layout_width="match_parent"
            android:layout_height="75dp" />
    </LinearLayout>
</RelativeLayout>
